--- a/src/rust_deps/Cargo.toml
+++ b/src/rust_deps/Cargo.toml
@@ -10,5 +10,7 @@ path = "lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-ic-cdk = "0.3"
-ic-cdk-macros = "0.3"
+ic-cdk = "0.4"
+ic-cdk-macros = "0.4"
+candid = "0.7"
+serde = "1.0"
